Replace Datenbankzugriff.ipynb

--- a/Datenbankzugriff.ipynb
+++ b/Datenbankzugriff.ipynb
@@ -10,7 +10,9 @@
     " * eine Verbindung zur Datenbank herstellen\n",
     " * SQL Ausführen (und Parameter aus Python nutzen)\n",
     " \n",
-    "Die Methoden die für den Zugriff auf die Datenbank nötig sind, sind in der Python Database API Specification v2 [PEP 249](https://www.python.org/dev/peps/pep-0249/) beschrieben."
+    "Die Methoden die für den Zugriff auf die Datenbank nötig sind, sind in der Python Database API Specification v2 [PEP 249](https://www.python.org/dev/peps/pep-0249/) beschrieben.\n",
+    "\n",
+    "Repo: https://projectbase.medien.hs-duesseldorf.de/eild.nrw-module/lernmodul-datenbanken/-/blob/master/README.md"
    ]
   },
   {
@@ -26,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +52,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## SQL Ausführen"
+    "## SQL Ausführen\n",
+    "\n",
+    "SQL-Statements werden mithilfe eines Cursors ausgeführt. Ein Cursor kann auch DML- oder DDL-Anfragen ausführen. Bei DQL-Abfragen können Datensätze mit fetchall() direkt geladen werden. "
    ]
   },
   {
@@ -86,10 +90,10 @@
     "cur.close()\n",
     "\n",
     "c= conn.cursor()\n",
-    "# Insert a row of data\n",
+    "# Daten einfuegen\n",
     "c.execute(\"INSERT INTO emp VALUES (1, 'Smith', 3200)\")\n",
     "c.execute(\"INSERT INTO emp VALUES (2, ?, 2800)\", [(\"Adams\")])\n",
-    "c.executemany(\"insert into emp values (?, ?, ?)\", \n",
+    "c.executemany(\"INSERT INTO emp VALUES (?, ?, ?)\", \n",
     "                [(3, \"King\", 5200), (4,\"Johnson\", 3400)])\n",
     "conn.commit();\n",
     "\n",
@@ -139,20 +143,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<b>:D Super! Der Datensatz ist vorhanden.</b>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "NameError",
+     "evalue": "name 'check' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-4fdad1db5c22>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mcheck\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'check' is not defined"
+     ]
     }
    ],
    "source": [
