--- a/Datenbankzugriff.ipynb
+++ b/Datenbankzugriff.ipynb
@@ -75,7 +75,7 @@
       "Adams\n",
       "King\n",
       "Johnson\n",
-      "Für größere Datenmengen sollte man auch fetchall aus performencegründen \n",
+      "Für größere Datenmengen sollte man auch fetchall aus performencegründen mit fetchone vorgenommen werden. \n",
       "Smith\n",
       "Adams\n",
       "King\n",
