--- a/Datenbankzugriff.ipynb
+++ b/Datenbankzugriff.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "\n",
     "#import mysql.connector\n",
-    "#mydb = mysql.connector.connect(\n",
+    "#conn = mysql.connector.connect(\n",
     "#  host=\"localhost\",\n",
     "#  user=\"yourusername\",\n",
     "#  password=\"yourpassword\",\n",
@@ -75,7 +75,7 @@
       "Adams\n",
       "King\n",
       "Johnson\n",
-      "Für größere Datenmengen sollte man auch fetchall aus performencegründen mit fetchone vorgenommen werden. \n",
+      "Für größere Datenmengen sollte man auch fetchall aus performencegründen verzichten. \n",
       "Smith\n",
       "Adams\n",
       "King\n",
@@ -117,7 +117,7 @@
     "    \n",
     "    \n",
     "# fetchone bis None\n",
-    "print(\"Für größere Datenmengen sollte man auch fetchall aus performencegründen \")\n",
+    "print(\"Für größere Datenmengen sollte man auch fetchall aus performencegründen verzichten. \")\n",
     "c= conn.cursor()\n",
     "c.execute('SELECT * FROM emp')\n",
     "row = c.fetchone()\n",
