--- a/Datenbankzugriff.ipynb
+++ b/Datenbankzugriff.ipynb
@@ -116,7 +116,7 @@
     "    \n",
     "    \n",
     "# fetchone bis None\n",
-    "print(\"Für größere Datenmengen sollte man auch fetchall aus performencegründen verzichten. \")\n",
+    "print(\"Für größere Datenmengen sollte man auf fetchall aus performencegründen verzichten. \")\n",
     "c= conn.cursor()\n",
     "c.execute('SELECT * FROM emp')\n",
     "row = c.fetchone()\n",
@@ -133,7 +133,7 @@
    "source": [
     "# Übung: Datensätze einfügen\n",
     "\n",
-    "Fügen Sie folgenden Datensatz in die Datenbank ein.\n",
+    "Fügen Sie folgenden Datensatz in die Tabelle emp der Datenbank ein.\n",
     "\n",
     "| ID   | Name       | Salary | \n",
     "|------|------------|--------|\n",
