--- a/Datenbankzugriff.ipynb
+++ b/Datenbankzugriff.ipynb
@@ -6,9 +6,13 @@
    "source": [
     "# Datenbankverbindungen mit Python\n",
     "\n",
-    " In diesem Notebook lernen wir, wie wir: \n",
+    "In diesem Notebook lernen wir, wie wir: \n",
     " * eine Verbindung zur Datenbank herstellen\n",
     " * SQL Ausführen (und Parameter aus Python nutzen)\n",
+    "\n",
+    "Vorraussetzungen hierfür sind:\n",
+    "  * Grundkenntnisse Python\n",
+    "  * Grundkenntnisse SQL\n",
     " \n",
     "Die Methoden die für den Zugriff auf die Datenbank nötig sind, sind in der Python Database API Specification v2 [PEP 249](https://www.python.org/dev/peps/pep-0249/) beschrieben.\n",
     "\n"
@@ -27,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,46 +62,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Smith\n",
-      "Adams\n",
-      "King\n",
-      "Johnson\n",
-      "Der Zugriff über den Spaltennamen ist auch möglich\n",
-      "Smith\n",
-      "Adams\n",
-      "King\n",
-      "Johnson\n",
-      "Für größere Datenmengen sollte man auch fetchall aus performencegründen verzichten. \n",
-      "Smith\n",
-      "Adams\n",
-      "King\n",
-      "Johnson\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
+    "# DDL\n",
     "cur = conn.cursor()\n",
     "cur.execute('''CREATE TABLE emp(id NUMBER, name VARCHAR(255), sal NUMBER)''')\n",
-    "cur.close()\n",
-    "\n",
+    "cur.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DML\n",
     "c= conn.cursor()\n",
     "# Daten einfuegen\n",
     "c.execute(\"INSERT INTO emp VALUES (1, 'Smith', 3200)\")\n",
     "c.execute(\"INSERT INTO emp VALUES (2, ?, 2800)\", [(\"Adams\")])\n",
     "c.executemany(\"INSERT INTO emp VALUES (?, ?, ?)\", \n",
     "                [(3, \"King\", 5200), (4,\"Johnson\", 3400)])\n",
-    "conn.commit();\n",
-    "\n",
+    "conn.commit();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Abfrage von Daten (SELECT)\n",
-    "\n",
     "c.execute('SELECT * FROM emp')\n",
     "result = c.fetchall()\n",
     "for x in result:\n",
@@ -113,8 +110,15 @@
     "for x in result:\n",
     "  print(x['name'])\n",
     "c.close()   \n",
-    "    \n",
-    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# fetchone bis None\n",
     "print(\"Für größere Datenmengen sollte man auf fetchall aus performencegründen verzichten. \")\n",
     "c= conn.cursor()\n",
@@ -142,21 +146,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'check' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-4fdad1db5c22>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mcheck\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mconn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'check' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#TODO: hier Datensatz einfügen\n",
     "\n",
@@ -169,22 +161,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Fehlerbehandlung"
+    "## Fehlerbehandlung\n",
+    "Bei Datenbankabfragen kann es immer zu Fehlern kommen, diese sollten behandelt werden."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Bei der Datenbankabfrage ist ein Fehler aufgetreten: no such table: non_existing_emp\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sqlite3 import OperationalError\n",
     "\n",
@@ -209,18 +194,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Emp Name: Smith\n",
-      "Die quadartische Summe der Gehälter ist 56680000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#\n",
     "# Single Row Function\n",
@@ -232,8 +208,16 @@
     "conn.create_function(\"format_ename\", 1, format_ename)\n",
     "cur = conn.cursor()\n",
     "cur.execute(\"select format_ename(e.name) from emp e\")\n",
-    "print(cur.fetchone()[0])\n",
-    "\n",
+    "# Zum Testen der Funktion wird nur der Wert ausgegeben\n",
+    "print(cur.fetchone()[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#\n",
     "# Das funktioniert auch mit Aggregatsfunktionen\n",
     "#\n",
@@ -250,15 +234,8 @@
     "conn.create_aggregate(\"sqr_sum\", 1, SqrSum)\n",
     "cur = conn.cursor()\n",
     "cur.execute(\"select sqr_sum(sal) from emp\")\n",
-    "print(\"Die quadartische Summe der Gehälter ist \" + str(cur.fetchone()[0]))\n"
+    "print(\"Die quadartische Summe der Gehälter ist \" + str(cur.fetchone()[0]))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
